--- a/templates/upload/dashboard-unregistered-developing.html
+++ b/templates/upload/dashboard-unregistered-developing.html
@@ -152,9 +152,25 @@
                                       {% if value == 0 %}
                                   <a  href="/learn/{{ key }}/#level0">
                                     <img src="static/app/images/bulb_little.png" alt="">
-                                        {% blocktrans %}
-                                        {{ key }}
-                                        {% endblocktrans %}
+                                    {% if key == "Abstraction" %}
+                                    抽象化 ({{ key }})
+                                    {% elif key == "Parallelization" %}
+                                    平行化 ({{ key }})
+                                    {% elif key == "Logic" %}
+                                    邏輯化 ({{ key }})
+                                    {% elif key == "Synchronization" %}
+                                    同步化 ({{ key }})
+                                    {% elif key == "FlowControl" %}
+                                    流程化 ({{ key }})
+                                    {% elif key == "UserInteractivity" %}
+                                    人性化 ({{ key }})
+                                    {% elif key == "DataRepresentation" %}
+                                    資料化 ({{ key }})
+                                    {% else %}
+                                    {% blocktrans %}
+                                    {{ key }
+                                    {% endblocktrans %}
+                                    {% endif %}
                                  </a><br>
                                    
                                 </tr>
@@ -162,17 +178,49 @@
 
                                 <a href="/learn/{{ key }}/#level1">
                                     <img src="static/app/images/bulb_little.png" alt=""> 
-                                        {% blocktrans %}
-                                        {{ key }}
-                                        {% endblocktrans %}
+                                    {% if key == "Abstraction" %}
+                                    抽象化 ({{ key }})
+                                    {% elif key == "Parallelization" %}
+                                    平行化 ({{ key }})
+                                    {% elif key == "Logic" %}
+                                    邏輯化 ({{ key }})
+                                    {% elif key == "Synchronization" %}
+                                    同步化 ({{ key }})
+                                    {% elif key == "FlowControl" %}
+                                    流程化 ({{ key }})
+                                    {% elif key == "UserInteractivity" %}
+                                    人性化 ({{ key }})
+                                    {% elif key == "DataRepresentation" %}
+                                    資料化 ({{ key }})
+                                    {% else %}
+                                    {% blocktrans %}
+                                    {{ key }
+                                    {% endblocktrans %}
+                                    {% endif %}
                                  </a><br>
                              {% elif value == 2 %}
 
                                 <a href="/learn/{{ key }}/#level2">
                                     <img src="static/app/images/bulb_little.png" alt=""> 
-                                        {% blocktrans %}
-                                        {{ key }}
-                                        {% endblocktrans %}
+                                    {% if key == "Abstraction" %}
+                                    抽象化 ({{ key }})
+                                    {% elif key == "Parallelization" %}
+                                    平行化 ({{ key }})
+                                    {% elif key == "Logic" %}
+                                    邏輯化 ({{ key }})
+                                    {% elif key == "Synchronization" %}
+                                    同步化 ({{ key }})
+                                    {% elif key == "FlowControl" %}
+                                    流程化 ({{ key }})
+                                    {% elif key == "UserInteractivity" %}
+                                    人性化 ({{ key }})
+                                    {% elif key == "DataRepresentation" %}
+                                    資料化 ({{ key }})
+                                    {% else %}
+                                    {% blocktrans %}
+                                    {{ key }
+                                    {% endblocktrans %}
+                                    {% endif %}
                                  </a><br>
                             
                             {% endif %}
@@ -196,7 +244,28 @@
                         {% if initialization.number == 0 %}
                         {% trans 'Your project does not have uninitialized attributes, good job!'%}
                         {% else %}
-                        {{ key }}({{ value }})
+                        
+                        {% if key == "Abstraction" %}
+                        抽象化 ({{ key }})
+                        {% elif key == "Parallelization" %}
+                        平行化 ({{ key }})
+                        {% elif key == "Logic" %}
+                        邏輯化 ({{ key }})
+                        {% elif key == "Synchronization" %}
+                        同步化 ({{ key }})
+                        {% elif key == "FlowControl" %}
+                        流程化 ({{ key }})
+                        {% elif key == "UserInteractivity" %}
+                        人性化 ({{ key }})
+                        {% elif key == "DataRepresentation" %}
+                        資料化 ({{ key }})
+                        {% else %}
+                        {% blocktrans %}
+                        {{ key }
+                        {% endblocktrans %}
+                        {% endif %}
+
+                        ({{ value }})
                         {% endif %}
                         {% endif%}
                         {% endif%}
@@ -240,9 +309,25 @@
                                         {% if value = 3 %}
                                         <span class="glyphicon glyphicon-star" id="star"></span>
                                         {% endif %}
+                                        {% if key == "Abstraction" %}
+                                        抽象化 ({{ key }})
+                                        {% elif key == "Parallelization" %}
+                                        平行化 ({{ key }})
+                                        {% elif key == "Logic" %}
+                                        邏輯化 ({{ key }})
+                                        {% elif key == "Synchronization" %}
+                                        同步化 ({{ key }})
+                                        {% elif key == "FlowControl" %}
+                                        流程化 ({{ key }})
+                                        {% elif key == "UserInteractivity" %}
+                                        人性化 ({{ key }})
+                                        {% elif key == "DataRepresentation" %}
+                                        資料化 ({{ key }})
+                                        {% else %}
                                         {% blocktrans %}
-                                        {{ key }}
+                                        {{ key }
                                         {% endblocktrans %}
+                                        {% endif %}
                                       </td>
                                       <td>
                                             {% if value = 0 %}
