fix(multilingual): update zh-hant and so on

--- a/templates/learn/base.html
+++ b/templates/learn/base.html
@@ -95,11 +95,11 @@
     <div class="container col-md-10 col-md-offset-1">
     <ul class="nav nav-tabs nav-justified">
       <li role="presentation"><a href="/learn/Logic/">{% trans "Logic" %}</a></li>
-      <li role="presentation"><a href="/learn/Data/">{% trans "Data representation" %}</a></li>
-      <li role="presentation"><a href="/learn/Parallelism/">{% trans "Parallelism" %}</a></li>
+      <li role="presentation"><a href="/learn/DataRepresentation/">{% trans "Data representation" %}</a></li>
+      <li role="presentation"><a href="/learn/Parallelization/">{% trans "Parallelism" %}</a></li>
       <li role="presentation"><a href="/learn/Synchronization/">{% trans "Synchronization" %}</a></li>
-      <li role="presentation"><a href="/learn/User/">{% trans "User interactivity" %}</a></li>
-      <li role="presentation"><a href="/learn/Flow/">{% trans "Flow control" %}</a></li>
+      <li role="presentation"><a href="/learn/UserInteractivity/">{% trans "User interactivity" %}</a></li>
+      <li role="presentation"><a href="/learn/FlowControl/">{% trans "Flow control" %}</a></li>
       <li role="presentation"><a href="/learn/Abstraction/">{% trans "Abstraction" %}</a></li>
     </ul>
     <ul class="nav nav-tabs nav-justified">
