--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -257,8 +257,14 @@
                     <h3></h3>
                     <br></br>
                 </div>
+                <div class="js-video [vimeo, widescreen]">
+                    <video width="320" height="240" controls>
+                        <source src="static/app/videos/drscratch.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                      Your browser does not support the video tag.
+                      </video>
+                </div>
                         <div class="js-video [vimeo, widescreen]">
-      
                             <iframe src="http://player.vimeo.com/video/114430745" width="500" height="333" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen=""></iframe>
                         </div> 
                     </div>
