fix(multilingual): update zh-hant and so on

--- a/templates/tournaments/participant/results.html
+++ b/templates/tournaments/participant/results.html
@@ -169,7 +169,7 @@
 		
 		       <!-- LOGIN REGISTER -->
 		       <ul class="nav navbar-nav navbar-right">
-				   <li class="navbar-brand"><a class="btn btn-default btn-topbar" id="tour">TOUR</a></li>
+				   <li class="navbar-brand"><a class="btn btn-default btn-topbar" id="tour">導覽</a></li>
 		           <li class="dropdown">
 		                   <a class="dropdown-toggle navbar-text" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{% trans "Logged in as " %} {{ username }}<span class="caret"></span></a>
 		                   <ul class="login-register small-text dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -202,7 +202,7 @@
                     <!-- LOGIN REGISTER -->
                     {% if username %}
                     	<ul class="nav navbar-nav navbar-right">
-                    		<li class="navbar-brand"><a class="btn btn-default btn-topbar" id="tour">TOUR</a></li>
+                    		<li class="navbar-brand"><a class="btn btn-default btn-topbar" id="tour">導覽</a></li>
 	                        <li class="dropdown">
 	                                <a class="dropdown-toggle navbar-text" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{% trans "Logged in as " %} {{ username }}<span class="caret"></span></a>
 	                                <ul class="login-register small-text dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -216,7 +216,7 @@
                         </ul>
                     {% else %}
 	                    <ul class="nav navbar-nav navbar-right login-register small-text">  
-	                    	<li class="navbar-brand"><a class="btn btn-default btn-topbar" id="tour">TOUR</a></li>
+	                    	<li class="navbar-brand"><a class="btn btn-default btn-topbar" id="tour">導覽</a></li>
 	                        <li style="display: block;" class="login js-login dropdown">
 	                          <a aria-expanded="false" role="button" href="#" data-toggle="dropdown" class="dropdown-toggle">{% trans "Sign in" %} 
 	                            <span class="caret"></span>
